--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs",
+        "skipLibCheck": true,
         "preserveConstEnums": true,
         "moduleResolution": "node",
         "sourceMap": true
